--- a/estructuraDatos/index.html
+++ b/estructuraDatos/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     <h1>Estructura de datos</h1>
-    <script src="scripts.js"></script>
+    <script src="scripts.js" type="module"></script>
 </body>
 </html>
